# stele

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
examples/: rpc-spoofing-test.tsx  site-prestart.tsx
scripts/: prebuild-deps.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src/components/: AddManifestDialog.tsx  ArtifactCard.tsx  DropZone.tsx  OpenUrlDialog.tsx  Sidebar.tsx
src/lib/: artifact-store.ts  db.ts  watcher.ts
src/routes/: Library.tsx  Settings.tsx  Viewer.tsx
src/runtime/: bridge.ts  manifest.ts  sandbox.ts  transform.ts
src/viewers/: HtmlViewer.tsx  JsxViewer.tsx
vendor-src/: .npmrc  package.json  pnpm-lock.yaml
