[package]
name = "atelier"
version = "0.1.0"
edition = "2021"

[lib]
name = "atelier_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "atelier"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
